Верстка Header,Services

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Blueasy</title>
   <!-- Import main styles -->
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
@@ -19,11 +19,73 @@
 <![endif]-->
 </head>
 <body>
+<header class="site-header">
+  <nav class="site-nav">
+    <div class="container">
+      <a href="#">
+        <img src="img/logo.png" alt="Logo">
+      </a>
+      <ul class="horizontal-nav">
+        <li><a href="#" class="active">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container">
+    <h1 class="hero-heading">
+    <span>“I’m looking for the unexpected</span><br>
+    <span>I’m looking for things I’ve never seen before.”</span>
+    </h1>
+  </div>
+</header>
 
+<section class="stn-services">
+  <h2 class="stn-heading container">Services</h2>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-lg-3">
+        <div class="sprite-coffee"></div>
+        <h3>Coffee</h3>
+        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <div class="sprite-instant"></div>
+        <h3>Instant</h3>
+        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <div class="sprite-serious"></div>
+        <h3>Serious</h3>
+        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+      </div>
+      <div class="col-md-6 col-lg-3">
+        <div class="sprite-frame"></div>
+        <h3>Frame</h3>
+        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="stn-portfolio">
+  <h2 class="stn-heading black-line container">Portfolio</h2>
+  <div class="container">
+  <ul class="horizontal-nav black-font">
+    <li><a href="#" class="active">All</a></li>
+    <li><a href="#">Paronamars</a></li>
+    <li><a href="#">Portreits</a></li>
+    <li><a href="#">Macro</a></li>
+    <li><a href="#">Journal</a></li>
+  </ul>
+</div>
+</section>
   <!--Import jQuery-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <!-- Site Sripts -->
-  <script src="assets/js/functions.js"></script>
+  <!-- <script src="assets/js/functions.js"></script> -->
 
 </body>
 </html>
