Верстка секции Portfolio
Добавлены простые анимации

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head lang="en">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,74 +19,144 @@
 <link rel="stylesheet" href="assets/css/ie.css">
 <![endif]-->
 </head>
+
 <body>
-<header class="site-header">
-  <nav class="site-nav">
+  <header class="site-header">
+    <nav class="site-nav">
+      <div class="container">
+        <a href="#">
+          <img src="img/logo.png" alt="Logo">
+        </a>
+        <ul class="horizontal-nav">
+          <li><a href="#" class="active">Home</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+    </nav>
     <div class="container">
-      <a href="#">
-        <img src="img/logo.png" alt="Logo">
-      </a>
-      <ul class="horizontal-nav">
-        <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
-  <div class="container">
-    <h1 class="hero-heading">
+      <h1 class="hero-heading">
     <span>“I’m looking for the unexpected</span><br>
     <span>I’m looking for things I’ve never seen before.”</span>
     </h1>
-  </div>
-</header>
+    </div>
+  </header>
 
-<section class="stn-services">
-  <h2 class="stn-heading container">Services</h2>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-lg-3">
-        <div class="sprite-coffee"></div>
-        <h3>Coffee</h3>
-        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
-      </div>
-      <div class="col-md-6 col-lg-3">
-        <div class="sprite-instant"></div>
-        <h3>Instant</h3>
-        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
-      </div>
-      <div class="col-md-6 col-lg-3">
-        <div class="sprite-serious"></div>
-        <h3>Serious</h3>
-        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
-      </div>
-      <div class="col-md-6 col-lg-3">
-        <div class="sprite-frame"></div>
-        <h3>Frame</h3>
-        <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+  <section class="stn-services">
+    <h2 class="stn-heading container">Services</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-lg-3">
+          <div class="sprite-coffee"></div>
+          <h3>Coffee</h3>
+          <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="sprite-instant"></div>
+          <h3>Instant</h3>
+          <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="sprite-serious"></div>
+          <h3>Serious</h3>
+          <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="sprite-frame"></div>
+          <h3>Frame</h3>
+          <p>Apple pie icing sweet. Brownie jelly-o applicake applicake sweet roll liquorice bear claw. Jujubes carrot cake cotton candy sweet tart brownie. Tiramisu applicake jujubes.</p>
+        </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section class="stn-portfolio">
-  <h2 class="stn-heading black-line container">Portfolio</h2>
-  <div class="container">
-  <ul class="horizontal-nav black-font">
-    <li><a href="#" class="active">All</a></li>
-    <li><a href="#">Paronamars</a></li>
-    <li><a href="#">Portreits</a></li>
-    <li><a href="#">Macro</a></li>
-    <li><a href="#">Journal</a></li>
-  </ul>
-</div>
-</section>
-  <!--Import jQuery-->
-  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <!-- Site Sripts -->
-  <!-- <script src="assets/js/functions.js"></script> -->
+  <div class="stn-portfolio">
+    <section class="container tab-wrapper">
+      <ul class="horizontal-nav black-font tab-menu">
+        <li><a href="#" class="active">All</a></li>
+        <li><a href="#">Paronamars</a></li>
+        <li><a href="#">Portreits</a></li>
+        <li><a href="#">Macro</a></li>
+        <li><a href="#">Journal</a></li>
+      </ul>
+      <h2 class="stn-heading black-line container">Portfolio</h2>
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3">
+          <a href="#!" class="thumb-1"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!" class="thumb-2"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!" class="thumb-3"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!" class="thumb-4"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!" class="thumb-5"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!" class="thumb-6"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!" class="thumb-7"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!" class="thumb-8"></a>
+        </div>
+      </div>
+      <!-- ///row -->
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+
+      </div>
+      <!-- ///row -->
+      <div class="row thumbs-row">
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+        <div class="col-sm-6 col-md-3">
+          <a href="#!"></a>
+        </div>
+      </div>
+      <!-- ///row -->
+    </section>
+  </div>
+  <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="js/functions.js"></script>
 
 </body>
+
 </html>
