Верстка секции Video, Twitter

--- a/app/index.html
+++ b/app/index.html
@@ -154,6 +154,33 @@
       <!-- ///row -->
     </section>
   </div>
+  <section class="stn-video">
+    <h2 class="stn-heading container">Just default Section</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5">
+          <p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.</p>
+          <p>Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.</p>
+          <a href="#" class="btn-ghost-grey">Visit me</a>
+        </div>
+        <div class="col-md-6 col-md-offset-1 stn-video-col">
+          <div class="videoWrapper"><iframe src="https://player.vimeo.com/video/212891518" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="stn-twitter">
+    <h2 class="stn-heading container">Twitter <i class="icon-twitter stn-twitter-icon"></i></h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-11">
+          <p>Unerdwear cookie liquorice. Cake donut cupcake lollipop soufflé candy. Chocolate oat cake <strong>@cheesecake</strong> tootsie roll.</p>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/functions.js"></script>
 
