--- a/app/index.html
+++ b/app/index.html
@@ -24,10 +24,11 @@
   <header class="site-header">
     <nav class="site-nav">
       <div class="container">
-        <a href="#">
+        <a href="#" class="main-logo">
           <img src="img/logo.png" alt="Logo">
         </a>
-        <ul class="horizontal-nav">
+        <span class="main-nav-trigger trigger-nav">&#9776</span>
+        <ul class="horizontal-nav trigger-victim">
           <li><a href="#" class="active">Home</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="#">Features</a></li>
@@ -181,6 +182,84 @@
       </div>
     </div>
   </section>
+
+  <section class="stn-about">
+    <h2 class="stn-heading container">who is John Doe</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie.</p>
+          <p>Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.</p>
+        </div>
+        <div class="col-md-6">
+          <p>Pudding dessert jujubes tiramisu gingerbread croissant tiramisu applicake. Sesame snaps sugar plum cotton candy chocolate bonbon lemon drops candy canes cotton candy. Cake toffee pie bear claw pastry.</p>
+          <ul class="social-links">
+            <li><a href="#"><i class="icon-twitter"></i></a></li>
+            <li><a href="#"><i class="icon-google-plus"></i></a></li>
+            <li><a href="#"><i class="icon-dribbble"></i></a></li>
+            <li><a href="#"><i class="icon-coffee"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="stn-testimonials">
+    <h2 class="stn-heading container black-line">Testimonials <i class="icon-quote"></i></h2>
+    <div class="container">
+      <blockquote class="tst-quote">
+        Applicake chocolate cake wafer toffee pie soufflé wafer. Tart marshmallow wafer macaroon cheesecake jelly. Gingerbread cookie soufflé sweet roll sweet roll jelly-o.
+        <cite>-Walter White</cite>
+      </blockquote>
+    </div>
+  </section>
+
+  <section class="stn-contact">
+    <h2 class="stn-heading container">Contact</h2>
+    <div class="container">
+      <form action="#" class="row">
+        <div class="col-md-6 col-md-push-6 frm-text-col">
+          <p>Jujubes bear claw croissant wafer sweet lemon drops brownie chocolate bar. Sweet lollipop halvah tootsie roll cake fruitcake. Chocolate cake chocolate bar gingerbread lollipop tart. Jujubes bear claw donut chupa chups.</p>
+          <p>Linda Newman<br> W325 State Road 123<br> Mondovi, WI(Wisconsin) 98746-54321<br> (715) 946 - 1234</p>
+        </div>
+        <div class="col-md-5 col-md-pull-6">
+          <div class="grm-group">
+            <label for="name">Full name</label>
+            <input id="name" type="text" class="frm-control">
+          </div>
+          <div class="grm-group">
+            <label for="mail">Email</label>
+            <input id="mail" type="email" class="frm-control">
+          </div>
+        </div>
+        <div class="col-md-12">
+          <div class="frm-group">
+            <label for="message">Message</label>
+            <textarea id="message" class="frm-control"></textarea>
+          </div>
+        </div>
+        <div class="col-sm-6"><button class="btn-submit" type="submit" name="button">Message</button></div>
+      </form>
+    </div>
+  </section>
+
+  <footer class="site-footer">
+    <div class="container">
+      <nav>
+        <ul class="footer-nav">
+          <li>
+            <a href="#">Home</a></li>
+          <li>
+            <a href="#">Services</a></li>
+          <li>
+            <a href="#">Portfolio</a></li>
+          <li>
+            <a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <p class="copyright">2017&copy</p>
+    </div>
+  </footer>
   <script src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="js/functions.js"></script>
 
